# garmin-run-dashboard

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: product-requirements.md  technical-architecture.md
scripts/: bootstrap_garmin_adapter.sh  garmin_adapter.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: EffortRing.tsx  Heatmap.tsx  RouteGlyph.tsx  SegmentedControl.tsx  TrendChart.tsx
src/features/auth/: LoginScreen.tsx
src/features/dashboard/: DashboardShell.tsx  dashboard-data.ts
src/lib/: dashboard.ts  errors.ts  garmin.ts  models.ts  storage.ts
src/styles/: app.css
