[package]
name = "garmin-run-dashboard"
version = "0.1.0"
description = "A local-first Garmin running dashboard desktop app"
authors = ["Kim Kihong <kimkihong1112@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "garmin_run_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
